# volara-torch

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: docs.yaml  mypy.yaml  publish.yaml  ruff.yaml  tests.yaml
docs/source/: api.rst  conf.py  index.rst  install.rst  overview.rst
examples/cremi/: cremi.py
src/volara-torch/: models.py
src/volara-torch/blockwise/: predict.py
tests/: test_models.py
