[project]
name = "volara-torch"
version = "0.1.0"
description = "Plugin for Volara including everything pytorch related. This includes the `Predict` task and the `models` module."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "volara",
    "torch>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.0", "ruff>=0.6"]
docs = [
    "autodoc_pydantic>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-material>=0.0.36",
    "sphinx-click>=6.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=4.0",
    "jupyter-sphinx>=0.5",
    "matplotlib>=3.0",
    "pooch>=1.8",
    "wget>=3.2",
    "funlib-show-neuroglancer>=0.2",
    "nbsphinx>=0.9.7",
    "jupytext>=1.16.7",
]

[project.entry-points."volara.blockwise_tasks"]
predict = "volara-torch.blockwise.predict:Predict"

[tool.uv.sources]
volara = { git = "https://github.com/e11bio/volara", rev = "volara-predict" }
